2006-08-15  David Hampton  <hampton@employees.org>

	* src/core-utils/gnc-gconf-utils.[ch]:
	* src/gnome-utils/dialog-preferences.c:
	* src/gnome-utils/gnc-plugin.[ch]:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/dialog-reset-warnings.c:
	* src/gnome-utils/gnc-tree-view.c: Remove overloading of an
	argument passed to the gnc_gconf_add/remove_notification
	functions..  This will solve a crash on Solaris caused by
	g_vasprintf being passed a "%s" format string and a NULL as
	argument.

2006-08-14  David Hampton  <hampton@employees.org>

	* doc/tip_of_the_day.list.in: Add a tip for raising the accounts
	menu in a register page.

2006-08-10  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/druid-qif-import.c: Fix account
	currency problems when importing QIF files (introduced by the
	widget cleanup.)

2006-08-08  Christian Stimming <stimming@tuhh.de>

	* configure.in, src/gnome-utils/schemas/Makefile.am: Find absolute
	path of gconftool-2 during configure. Make gconftool rules to fail
	if gconftool-2 could not be found. bug#349851.

	* src/gnome-utils/druid-gnc-xml-import.c: Improve wording for XML
	data file import druid. bug#342727.

2006-08-06  David Hampton  <hampton@employees.org>

	* various: Regularize the account type names into the form
	ACCT_TYPE_xxx.

2006-08-05  David Hampton  <hampton@employees.org>

	* import-backend.c: gnc_import_process_trans_item() should return
	TRUE in those cases where the transaction has been processed.

	* src/core-utils/gnc-gtk-utils.[ch]:
	* src/core-utils/gnc-gtk-utils.h:
	* src/import-export/import-main-matcher.c:
	* src/report/report-gnome/dialog-style-sheet.c:
	* src/gnome-utils/gnc-main-window.c: Fix compilation errors on
	FC3.

2006-08-05  Andreas Köhler  <andi5.py@gmx.net>

	* various: Unref all new stores.

	* src/gnome-utils/dialog-account.c: Check for account type
	  compatibility when creating a new account. Fixes 344966.
